--- a/Presentations/ProgressIQ.IdentityServer/ProgressIQ.IdentityServer.Web.csproj
+++ b/Presentations/ProgressIQ.IdentityServer/ProgressIQ.IdentityServer.Web.csproj
@@ -888,6 +888,7 @@
     </EmbeddedResource>
     <Content Include="Views\Atoz\AZ.cshtml" />
     <Content Include="Areas\Admin\Views\LdapConfiguration\Index.cshtml" />
+    <None Include="Properties\PublishProfiles\IdentityServer.pubxml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
